; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ibus/extr_gk104.c_gk104_ibus_intr_hub.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ibus/extr_gk104.c_gk104_ibus_intr_hub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_subdev = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

@.str = private unnamed_addr constant [25 x i8] c"HUB%d: %06x %08x (%08x)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_subdev*, i32)* @gk104_ibus_intr_hub to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gk104_ibus_intr_hub(%struct.nvkm_subdev* %0, i32 %1) #0 {
  %3 = alloca %struct.nvkm_subdev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nvkm_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.nvkm_subdev* %0, %struct.nvkm_subdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %3, align 8
  %10 = getelementptr inbounds %struct.nvkm_subdev, %struct.nvkm_subdev* %9, i32 0, i32 0
  %11 = load %struct.nvkm_device*, %struct.nvkm_device** %10, align 8
  store %struct.nvkm_device* %11, %struct.nvkm_device** %5, align 8
  %12 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = mul nsw i32 %13, 2048
  %15 = add nsw i32 1188128, %14
  %16 = call i32 @nvkm_rd32(%struct.nvkm_device* %12, i32 %15)
  store i32 %16, i32* %6, align 4
  %17 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %18 = load i32, i32* %4, align 4
  %19 = mul nsw i32 %18, 2048
  %20 = add nsw i32 1188132, %19
  %21 = call i32 @nvkm_rd32(%struct.nvkm_device* %17, i32 %20)
  store i32 %21, i32* %7, align 4
  %22 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %23 = load i32, i32* %4, align 4
  %24 = mul nsw i32 %23, 2048
  %25 = add nsw i32 1188136, %24
  %26 = call i32 @nvkm_rd32(%struct.nvkm_device* %22, i32 %25)
  store i32 %26, i32* %8, align 4
  %27 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %3, align 8
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @nvkm_debug(%struct.nvkm_subdev* %27, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %28, i32 %29, i32 %30, i32 %31)
  %33 = load %struct.nvkm_device*, %struct.nvkm_device** %5, align 8
  %34 = load i32, i32* %4, align 4
  %35 = mul nsw i32 %34, 2048
  %36 = add nsw i32 1188136, %35
  %37 = call i32 @nvkm_mask(%struct.nvkm_device* %33, i32 %36, i32 512, i32 0)
  ret void
}

declare dso_local i32 @nvkm_rd32(%struct.nvkm_device*, i32) #1

declare dso_local i32 @nvkm_debug(%struct.nvkm_subdev*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @nvkm_mask(%struct.nvkm_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
